--- a/chapter4.tex
+++ b/chapter4.tex
@@ -41,12 +41,12 @@ We implemented automated scraping systems to collect real estate data from vario
     \item RE/MAX Tunisia \cite{RemaxTunisia} for detailed property valuation data in both sale and rental markets
     \item Al-Mindhar \cite{AlMindhar} for blog content related to legal aspects, investment strategies, and real estate regulations in Tunisia to train knowledge-based AI assistants
 \end{itemize}
-
+\newpage
 \subsubsection{Scraping Architecture}
-\begin{figure}[ht!]
+\begin{figure}[htbp]
     \centering
     % Placeholder for a diagram of the scraping workchart
-    \includegraphics[width=1\textwidth]{images/workchartscraper.png}
+    \includegraphics[width=0.55\textwidth]{images/workchartscraper.png}
     \caption{Data Scraping workchart}
     \label{fig:scraping-workchart}
 \end{figure}
