--- a/chapter5.tex
+++ b/chapter5.tex
@@ -318,13 +318,13 @@ The testing approach included:
 
 \newpage
 % Placeholder for Full Blockchain Deployment Diagram
-\begin{figure}[htbp]
-  \centering
-  % PLACEHOLDER: Insert Full Blockchain Deployment Diagram here
-  \includegraphics[width=\textwidth]{images/blockchain_deployment_diagram.png}
-  \caption{Full Blockchain Deployment Diagram}
-  \label{fig:blockchain-deployment}
-\end{figure}
+% \begin{figure}[htbp]
+%   \centering
+%   % PLACEHOLDER: Insert Full Blockchain Deployment Diagram here
+%   \includegraphics[width=\textwidth]{images/blockchain_deployment_diagram.png}
+%   \caption{Full Blockchain Deployment Diagram}
+%   \label{fig:blockchain-deployment}
+% \end{figure}
 
 \section{Integration Flow}
 
