fix(somefixes): some fixes

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -23,6 +23,37 @@ The purpose of this section is to present the company within which I developed m
     \label{fig:hosting-company}
 \end{figure}
 
+\newpage
+\begin{table}[htbp]
+    \centering
+    \caption{KZ IT Services - Company Information}
+    \label{tab:kz_it_services_info}
+    \renewcommand{\arraystretch}{1.3}
+    \begin{tabular}{|l|p{0.7\textwidth}|}
+        \hline
+        \rowcolor{primary!10}
+        \textbf{Aspect} & \textbf{Details} \\
+        \hline
+        Company Name & KZ IT Services \\
+        \hline
+        \rowcolor{background!50}
+        Specialization & Custom software development, IT solutions, Digital transformation \\
+        \hline
+        Mission Focus & Delivering innovative, robust, and scalable IT solutions to drive client efficiency and success through quality and continuous improvement. \\
+        \hline
+        \rowcolor{background!50}
+        Size & 2-10 employees \\
+        \hline
+        \rowcolor{background!50}
+        Location & Djerba, Tunisia \\
+        \hline
+        Website & [Please provide website] \\
+        \hline
+        \rowcolor{background!50}
+        Contact & [Please provide contact info] \\
+        \hline
+    \end{tabular}
+\end{table}
 
 \textbf{\textcolor{primary}{``KZ IT Services''}} is a dynamic software company dedicated to delivering innovative IT solutions tailored to modern business needs. they are specialize in designing and developing robust, scalable applications that drive efficiency and digital transformation. thier experienced team leverages cutting-edge technology to create customized software that exceeds client expectations. With a strong commitment to quality and continuous improvement, they build lasting partnerships based on trust and excellence. At ``KZ IT Service'', innovation is at the core of everything they do, empowering thier clients to achieve sustainable growth and success.
 
@@ -32,13 +63,16 @@ This preliminary study provides a review of some existing investment and asset m
 
 \subsection{Existing Solutions Study}
 
-After conducting extensive research on investment platforms similar to our concept across the global market, we carefully analyzed numerous applications based on their performance metrics and market position. From this comprehensive study, we specifically selected ``Aseel'' and ``Stake'' for in-depth analysis \cite{G2CompetitiveAnalysis2024, AsanaCompetitiveAnalysis2024} due to their exceptional performance and status as leading companies in the real estate investment platform sector.
+After conducting extensive research on investment platforms similar to our concept across the global market, we carefully analyzed numerous applications based on their performance metrics and market position. From this comprehensive study, we specifically selected ``Aseel'' \cite{AssilEyeInstitute} and ``Stake'' \cite{StakeWebsite} for in-depth analysis \cite{G2CompetitiveAnalysis2024, AsanaCompetitiveAnalysis2024} due to their exceptional performance and status as leading companies in the real estate investment platform sector.
 
 \subsubsection{The Aseel Platform}
 
-\textbf{\textcolor{primary}{Aseel}} is a portal through which users can invest in different real estate projects with ease. The interface allows the clients to surf various investment opportunities, view the details of the properties, and then make an informed decision. Aseel introduces transparency in the investment process by offering financial data, updates regarding projects, and returns that are estimated. This platform comes with an easy-to-use dashboard through which one tracks their investments and manages their assets without any hassle. The interface of the Aseel Platform is shown in Figure \ref{fig:aseel-platform}.
+\textbf{\textcolor{primary}{Aseel}} \cite{AssilEyeInstitute} is a portal through which users can invest in different real estate projects with ease. The interface allows the clients to surf various investment opportunities, view 
 
 \newpage
+
+the details of the properties, and then make an informed decision. Aseel introduces transparency in the investment process by offering financial data, updates regarding projects, and returns that are estimated. This platform comes with an easy-to-use dashboard through which one tracks their investments and manages their assets without any hassle. The interface of the Aseel Platform is shown in Figure \ref{fig:aseel-platform}.
+
 
 \begin{figure}[htbp]
     \centering
@@ -60,7 +94,7 @@ After conducting extensive research on investment platforms similar to our conce
 
 \subsubsection{The Stake Platform}
 
-\textbf{\textcolor{primary}{Stake}} is an online investment platform that deals with real estate crowdfunding. It provides the opportunity to invest in fractions of property ownership, hence diversifying a portfolio without huge capital. On Stake, there are AI-powered recommendations based on user preferences, seamless payment integration, and a secure environment for investment. Besides, liquidity is guaranteed by enabling exit options for investors who may want to sell their shares in ongoing projects. Figure \ref{fig:stake-platform} illustrates the interface of the Stake Platform.
+\textbf{\textcolor{primary}{Stake}} \cite{StakeWebsite} is an online investment platform that deals with real estate crowdfunding. It provides the opportunity to invest in fractions of property ownership, hence diversifying a portfolio without huge capital. On Stake, there are AI-powered recommendations based on user preferences, seamless payment integration, and a secure environment for investment. Besides, liquidity is guaranteed by enabling exit options for investors who may want to sell their shares in ongoing projects. Figure \ref{fig:stake-platform} illustrates the interface of the Stake Platform.
 
 \newpage
 \thispagestyle{empty}
@@ -120,29 +154,24 @@ Table \ref{tab:evaluation} presents the evaluation of the existing solutions bas
 
 \subsection{Proposed Solution}
 
-Having studied the already working platforms for investments, we found strengths and weaknesses that could define what was required from the project. 
+The \textbf{\textcolor{primary}{Korpor}} platform is envisioned as a dual-benefit real estate solution, meticulously designed to cater to the distinct requirements of both real estate agencies and individual investors. Our approach prioritizes a symbiotic ecosystem where operational efficiency for agencies translates into enhanced opportunities and a seamless experience for investors.
 
-
-The \textbf{\textcolor{primary}{Korpor}} platform will be offering the following features:
-
-A listing of investment opportunities with deep financial insights into those opportunities and the abiltie of investing in fractions of property ownership.
-
+\subsubsection*{Benefits for Real Estate Agencies}
 \begin{itemize}
-    \item AI-driven recommendations of investments as per users' preferences \cite{LinkedInAIFinTech2024}.
-    \item Smooth funding and payout mechanisms.
-    \item Real-time portfolio performance tracking on a single screen/dashboard.
-    \item Forum for interactive discussions on strategy and market trends among its users.
-    \item Referral and Rewards System: An engaging system for rewarding users via referral.
+    \item \textbf{Expanded Market Reach:} Showcase properties to a broader pool of potential investors, increasing visibility and attracting qualified leads.
+    \item \textbf{Scale Sales with Fractional Ownership leveraging Blockchain:} Democratize investment by offering properties in shares, recorded securely and transparently on the blockchain. This approach significantly broadens the investor base and enhances sales potential.
+    \item \textbf{Streamlined Client Interaction \& Management:} Utilize intuitive tools to efficiently manage property listings, handle inquiries, and maintain communication with prospective and existing investors.
+    \item \textbf{Enhanced Digital Presence:} Leverage a modern, professional platform to bolster brand image, credibility, and competitiveness in the digital real estate marketplace.
+    \item \textbf{Operational Efficiency \& Insights:} Simplify the process of presenting investment opportunities, track client interest, and gain valuable insights into market trends and property performance.
 \end{itemize}
 
-Our proposed solution will look at:
-
+\subsubsection*{Benefits for Investors}
 \begin{itemize}
-    \item Developing an efficient mobile application for investment management.
-    \item Increasing the level of users engagement with recommendations using the power of AI \cite{MobileRealityAIRealEstate2024, HouseCanaryAIInvestors2024, SmilkovTensorFlowJS2019}.
-    \item Ensuring responsive and user-friendly interaction with the interface.
-    \item Gaining the trust of investors by ensuring transparency and security in the investing platform.
-    \item Enhancing the security of data and following all the financial regulations.
+    \item \textbf{Diverse \& Accessible Investment Options:} Easily discover and invest in a curated range of real estate opportunities, including fractional ownership, supported by comprehensive financial details and project insights.
+    \item \textbf{Simplified Investment Experience:} Invest in real estate without the traditional burdens. The platform handles complex paperwork and the ongoing rent collection process, making property investment more accessible and manageable for individuals.
+    \item \textbf{AI-Powered Personalized Guidance:} Receive intelligent investment recommendations tailored to individual profiles, risk appetite, and financial goals, leveraging advanced analytics \cite{LinkedInAIFinTech2024, MobileRealityAIRealEstate2024, HouseCanaryAIInvestors2024, SmilkovTensorFlowJS2019}.
+    \item \textbf{Transparent \& Secure Transactions with Blockchain:} Experience a secure and transparent investment journey, with transactions recorded on the blockchain for enhanced security and immutability, alongside clear processes for funding, payouts, and robust adherence to financial regulations, fostering trust and confidence.
+    \item \textbf{Seamless Portfolio Management:} Effortlessly track investment performance in real-time via a user-friendly dashboard and a dedicated mobile application, ensuring convenient on-the-go access and control.
 \end{itemize}
 
 
@@ -216,4 +245,4 @@ The Scrum events are key elements of the Scrum Framework. They provide regular o
 
 It is clear that planning and methodology are essential pillars to ensure the success of the project. By fully understanding the project framework, including the host organization's expectations and the challenges ahead, the team is better prepared to meet the challenges ahead.
 
-This chapter lays the solid foundation on which the entire project will be built, providing a valuable guide for the next steps. The next chapter will allow us to analyze and specify the needs developed in our project. 
+This chapter lays the solid foundation on which the entire project will be built, providing a valuable guide for the next steps. The next chapter will allow us to analyze and specify the requirements developed for our project. 
