--- a/general_introduction.tex
+++ b/general_introduction.tex
@@ -44,13 +44,8 @@
 
 \noindent Developed under a flexible Agile framework that combines iterative development with strategic project management best practices, Korpor is designed to rapidly adapt to evolving market trends and user needs. This methodical approach allows for regular feedback, swift enhancements, and the seamless integration of innovative features throughout the development lifecycle.
 
-\vspace{0.05cm}
-\begin{center}
-\textcolor{primary}{\rule{0.3\textwidth}{0.4pt}}
-\end{center}
-\vspace{0.05cm}
 
-\noindent \textbf{\textcolor{primary}{Document Structure}}
+% Our document is structured as follows:
 
 % \vspace{-0.4cm} % Reduce space before list
 \begin{itemize}[leftmargin=1.5em, itemsep=0pt, parsep=0pt, topsep=0.05cm]
