--- a/references.bib
+++ b/references.bib
@@ -787,4 +787,20 @@
   urldate      = {2023-11-15},
   organization = {STE SK ALMINDHAR},
   year         = {2023}
+}
+
+@misc{StakeWebsite,
+  author       = {{Stake}},
+  title        = {Stake: The modern way for anyone to invest in real estate},
+  year         = {2024},
+  howpublished = {\url{https://getstake.com/welcome}},
+  note         = {Accessed: 2024}
+}
+
+@misc{AssilEyeInstitute,
+  author       = {{Assil Eye Institute}},
+  title        = {Assil Eye Institute},
+  year         = {2024},
+  howpublished = {\url{https://assileye.com/}},
+  note         = {Accessed: 2024}
 } 
