doc(deployement): adding deploiement diagram

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -154,24 +154,19 @@ Table \ref{tab:evaluation} presents the evaluation of the existing solutions bas
 
 \subsection{Proposed Solution}
 
-The \textbf{\textcolor{primary}{Korpor}} platform is envisioned as a dual-benefit real estate solution, meticulously designed to cater to the distinct requirements of both real estate agencies and individual investors. Our approach prioritizes a symbiotic ecosystem where operational efficiency for agencies translates into enhanced opportunities and a seamless experience for investors.
+The \textbf{\textcolor{primary}{Korpor}} platform is a dual-benefit real estate solution for agencies and investors, prioritizing a symbiotic ecosystem where agency efficiency enhances investor opportunities and experience.
 
 \subsubsection*{Benefits for Real Estate Agencies}
 \begin{itemize}
-    \item \textbf{Expanded Market Reach:} Showcase properties to a broader pool of potential investors, increasing visibility and attracting qualified leads.
-    \item \textbf{Scale Sales with Fractional Ownership leveraging Blockchain:} Democratize investment by offering properties in shares, recorded securely and transparently on the blockchain. This approach significantly broadens the investor base and enhances sales potential.
-    \item \textbf{Streamlined Client Interaction \& Management:} Utilize intuitive tools to efficiently manage property listings, handle inquiries, and maintain communication with prospective and existing investors.
-    \item \textbf{Enhanced Digital Presence:} Leverage a modern, professional platform to bolster brand image, credibility, and competitiveness in the digital real estate marketplace.
-    \item \textbf{Operational Efficiency \& Insights:} Simplify the process of presenting investment opportunities, track client interest, and gain valuable insights into market trends and property performance.
+    \item \textbf{Expanded Market Reach \& Sales Scalability:} Showcase properties to more investors and scale sales via blockchain-recorded fractional ownership, broadening the investor base.
+    \item \textbf{Streamlined Operations \& Enhanced Presence:} Efficiently manage listings, client interactions, and bolster digital brand image, gaining insights into market trends.
 \end{itemize}
 
 \subsubsection*{Benefits for Investors}
 \begin{itemize}
-    \item \textbf{Diverse \& Accessible Investment Options:} Easily discover and invest in a curated range of real estate opportunities, including fractional ownership, supported by comprehensive financial details and project insights.
-    \item \textbf{Simplified Investment Experience:} Invest in real estate without the traditional burdens. The platform handles complex paperwork and the ongoing rent collection process, making property investment more accessible and manageable for individuals.
-    \item \textbf{AI-Powered Personalized Guidance:} Receive intelligent investment recommendations tailored to individual profiles, risk appetite, and financial goals, leveraging advanced analytics \cite{LinkedInAIFinTech2024, MobileRealityAIRealEstate2024, HouseCanaryAIInvestors2024, SmilkovTensorFlowJS2019}.
-    \item \textbf{Transparent \& Secure Transactions with Blockchain:} Experience a secure and transparent investment journey, with transactions recorded on the blockchain for enhanced security and immutability, alongside clear processes for funding, payouts, and robust adherence to financial regulations, fostering trust and confidence.
-    \item \textbf{Seamless Portfolio Management:} Effortlessly track investment performance in real-time via a user-friendly dashboard and a dedicated mobile application, ensuring convenient on-the-go access and control.
+    \item \textbf{Accessible \& Simplified Investments:} Discover diverse real estate opportunities, including fractional ownership, with simplified processes that handle paperwork and rent collection.
+    \item \textbf{AI-Powered Guidance \& Secure Transactions:} Receive personalized AI recommendations and experience secure, transparent, blockchain-recorded transactions with robust regulatory adherence.
+    \item \textbf{Seamless Portfolio Management:} Track investments in real-time via a user-friendly dashboard and mobile app.
 \end{itemize}
 
 
