--- a/general_introduction.tex
+++ b/general_introduction.tex
@@ -50,7 +50,7 @@
 % \vspace{-0.4cm} % Reduce space before list
 \begin{itemize}[leftmargin=1.5em, itemsep=0pt, parsep=0pt, topsep=0.05cm]
 \item The first chapter, \textbf{\textcolor{primary}{Project Context}}, delves into the industry challenges and the vision that inspired Korpor's creation.
-\item The second chapter, \textbf{\textcolor{primary}{Analysis and Specification of Needs}}, outlines the comprehensive requirements gathering, needs analysis, architectural design, and the selection of cutting-edge tools and technologies.
+\item The second chapter, \textbf{\textcolor{primary}{Analysis and Specification of Requirements}}, outlines the comprehensive requirements gathering, needs analysis, architectural design, and the selection of cutting-edge tools and technologies.
 \item Subsequent chapters document the progressive implementation of core features—from AI-enhanced project recommendations and blockchain-secured transactions to comprehensive portfolio management—each developed through clearly defined sprints encompassing analysis, design, and deployment phases.
 \end{itemize}
 
