--- a/rapport.tex
+++ b/rapport.tex
@@ -36,6 +36,9 @@
 \usepackage[backend=biber, style=numeric, sorting=none]{biblatex} % Use BibLaTeX
 \addbibresource{references.bib} % Specify the BibTeX file
 
+\renewcommand*{\bibleftbracket}{<}
+\renewcommand*{\bibrightbracket}{>}
+
 % Define a refined professional color palette
 \definecolor{primary}{RGB}{7, 6, 6} % Deep navy blue
 \definecolor{secondary}{RGB}{145, 145, 145} % Medium gray
